<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/love"
    android:orientation="vertical"
    android:id="@+id/llRoot"
    android:padding="16dp"
    tools:context="com.karangop.lovecalculator.views.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/intro"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/first_name">

        <EditText
            android:id="@+id/EtFname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="20dp" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/second_name">

        <EditText
            android:id="@+id/EtSname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="20dp" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:padding="15dp"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="15sp" />

</LinearLayout>